--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(51, 51, 51); opacity: 1; height: 100px; width: 100%;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
@@ -8,45 +8,87 @@
 }
 
 .barra {
-  color: lightseagreen;
+  color: white;
 }
 
-.image {
+.img-responsive {
+  margin-top: 50px;
   position: relative;
   width: 100%; /* for IE 6 */
 }
-
 
 @media only screen and (max-width: 768px) {
   .servicios {
     font-size: 20px;
     font-family: 'Inconsolata', monospace;
   }
+  .sub {
+    font-size: 15px;
+    font-family: 'Inconsolata', monospace;
+  }
 }
-
 
 h2 {
   position: absolute;
-  top: 100px;
-  left: 0;
-  width: 100%;
-  background-color: rgb(255, 255, 255); opacity: 0.5; height: 100px; width: 600px;
-  font-family: 'Inconsolata', monospace;
+  background-color: transparent;
+  top: 70px;
+  left: 0px;
   text-align: left; padding-left: 20px; padding-top: 18px;
-  color: black;
+  color: white;
 }
 
+h3 {
+  position: absolute;
+  background-color: transparent;
+  top: 100px;
+  left: 0px;
+  text-align: left; padding-left: 20px; padding-top: 18px;
+  color: white;
+}
 
 @media only screen and (max-width: 768px) {
   .img-circle {
     height: 250px;
     display: none;
+    padding-left: 20px;
     margin: 50px;
     font-family: 'Inconsolata', monospace;
+    text-align: center;
   }
 }
 
-body {
+.skills {
+  background-color: transparent;
+  font-family: 'Inconsolata', monospace;
+  font-size: 50px;
+  text-align: center;
+  color: black;
+}
+
+.label {
   padding-bottom: 70px;
+  font-family: 'Inconsolata', monospace;
+  display: inline;
+}
+
+footer {
+  position: fixed; 
+  height: 50px;
+  bottom: 0px;
+  width: 100%;
+  background-color: rgb(255, 255, 255); opacity: 0.5; height: 50px; width: 100%;
+  color: black;
+}
+
+.copy {
+  float: left;
+  margin: 15px;
+  font-family: 'Inconsolata', monospace;
+  color: black;
+}
+
+.rrss {
+  float: right;
+  margin: 15px;
   font-family: 'Inconsolata', monospace;
 }
